# SWFOC-Mod-Menu

./: .codacy.yml  .coverage-thresholds.json  .coveragerc  .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .jscpd.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  StarWarsG.CT  SwfocTrainer.sln  TODO.md  codecov.yml  launch-app-debug.cmd  launch-app-release.cmd  osv-scanner.toml  pyrightconfig.json  pytest.ini  requirements.txt  ruff.toml  run-deterministic-tests.cmd  run-live-tests.cmd  sonar-project.properties
(new)codex(plans)/: (1)PLAN.md  (+8 more)
native/: CMakeLists.txt  README.md
native/SwfocExtender.Bridge/: CMakeLists.txt
native/SwfocExtender.Bridge/include/swfoc_extender/bridge/: BridgeHostJson.hpp  NamedPipeBridgeServer.hpp
native/SwfocExtender.Bridge/src/: BridgeHostJson.cpp  BridgeHostMain.cpp  NamedPipeBridgeServer.cpp
native/SwfocExtender.Core/: CMakeLists.txt
native/SwfocExtender.Core/include/swfoc_extender/core/: CapabilityProbe.hpp  HookLifecycleManager.hpp  StringHash.hpp
native/SwfocExtender.Core/src/: CapabilityProbe.cpp  HookLifecycleManager.cpp
native/SwfocExtender.Overlay/: CMakeLists.txt
native/SwfocExtender.Overlay/include/swfoc_extender/overlay/: OverlayState.hpp
native/SwfocExtender.Overlay/src/: OverlayState.cpp
native/SwfocExtender.Plugins/: CMakeLists.txt
native/SwfocExtender.Plugins/src/: BuildPatchPlugin.cpp  EconomyPlugin.cpp  GlobalTogglePlugin.cpp  HelperLuaPlugin.cpp
(+47825 files in other folders)
